--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+//    id 'kotlin-kapt'
 
 }
 
@@ -42,6 +43,7 @@ android {
 }
 
 dependencies {
+    def paging_version = "3.1.1"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -62,13 +64,17 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.10.1'
-    kapt "com.google.dagger:hilt-compiler:2.44"
+//    kapt "com.google.dagger:hilt-compiler:2.44"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation"com.squareup.okhttp3:logging-interceptor:4.11.0"
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    //implementation "androidx.paging:paging-runtime:$paging_version"
+    //testImplementation "androidx.paging:paging-common:$paging_version"
 
 
 
 }
-kapt {
-    correctErrorTypes true
-}
+//kapt {
+//    correctErrorTypes true
+//}
